# opencl-windows-examples

./: .gitignore  LESSONS_LEARNED.md  README.md
examples/000_device_enumeration/: CMakeLists.txt  README.md  build.bat  main.cpp
examples/001_hello_opencl/: CMakeLists.txt  README.md  build.bat  hello.cl  main.cpp
examples/002_vector_addition/: CMakeLists.txt  README.md  build.bat  main.cpp  vector_add.cl
examples/003_breakeven_analysis/: CMakeLists.txt  README.md  build.bat  main.cpp
examples/004_async_multidevice/: CMakeLists.txt  README.md  build.bat  main.cpp  vector_add.cl
examples/005_parallelization_comparison/: CMakeLists.txt  README.md  build.bat  main.cpp  matvec.cl
examples/006_matrix_multiply/: CMakeLists.txt  README.md  build.bat  main.cpp  matmul.cl
examples/007_image_convolution/: CMakeLists.txt  README.md  build.bat  convolution.cl  main.cpp
examples/008_nbody_simulation/: CMakeLists.txt  README.md  build.bat  main.cpp  nbody.cl
setup/: check_opencl_installed.bat  detect_opencl_hardware.bat
